# tested-trait

./: Cargo.toml  README.md
.github/workflows/: ci.yml
tested-trait/: Cargo.toml
tested-trait-macros/: Cargo.toml
tested-trait-macros/src/: lib.rs
tested-trait/src/: lib.rs
tested-trait/tests/ui/: test-impl-generic-trait.rs  test-impl-generic-trait.stderr  test-impl-generic-type.rs  test-impl-generic-type.stderr  test-wrong-return-type.rs  test-wrong-return-type.stderr  tests-same-name.rs  tests-same-name.stderr
